# fastapi-observability

./: README_hunter-debugger.md  REPORT.md  docker-compose.yaml  locustfile.py
.github/workflows/: test-observability.yml
etc/dashboards/: fastapi-observability.json
etc/prometheus/: prometheus.yml
etc/tempo/: tempo.yml
fastapi_app/: main.py  pyproject.toml  utils.py
